# spotify-downloader

./: .gitignore  README.md  app.py  pyproject.toml
.claude/: launch.json
static/: script.js  style.css
templates/: index.html
