[project]
name = "spotify-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Trishan Talukdar",email = "trishan023@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "spotdl (>=4.4.3,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
